--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.9"
 
 services:
   app:
-    image: ghcr.io/safepath-as/greentechsee-2024:app
+    image: ghcr.io/safepath-as/greentechsee-2024/app:latest
     networks:
       - nginx-proxy-network
     restart: always
