--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,9 @@ services:
       - nginx-proxy-network
     restart: always
     environment:
-      - VIRTUAL_HOST=greentechsee.safepath.no
-      - LETSENCRYPT_HOST=greentechsee.safepath.no
-    
+      - VIRTUAL_HOST=${APP_HOST}
+      - LETSENCRYPT_HOST=${APP_HOST}
+
   # Load balancer
   nginx-proxy:
     image: nginxproxy/nginx-proxy
