--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          path: api
       
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -21,7 +23,7 @@ jobs:
           python-version: '3.x'
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r api/requirements.txt
       
       - name: Run pytest
-        run: pytest
+        run: pytest api
