--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: '3.x'
       
       - name: Install dependencies
-        run: pip install -r api/requirements.txt
+        run: pip install -r requirements.txt
       
       - name: Run pytest
-        run: pytest api
+        run: pytest
