--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,6 @@ APP_HOST=example.com
 
 # URL for the back-end API
 APP_HOST=api.example.com
+
+# Password for the database
+POSTGRES_PASSWORD=example
