Add config in python with CORS setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     environment:
       - VIRTUAL_HOST=${API_HOST}
       - LETSENCRYPT_HOST=${API_HOST}
+      - CORS_ORIGINS=https://${APP_HOST}
   database:
     image: postgres:13.3
     command: postgres -c 'max_connections=50'
