--- a/external.docker-compose.yml
+++ b/external.docker-compose.yml
@@ -29,7 +29,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: greentechsee
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     restart: always
     volumes:
       - data:/var/lib/postgresql/data/
