--- a/external.docker-compose.yml
+++ b/external.docker-compose.yml
@@ -25,9 +25,9 @@ services:
     networks:
       - nginx-proxy-network
     environment:
-      POSTGRES_USER: greentechsee
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: greentechsee
+      - POSTGRES_USER=greentechsee
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=greentechsee
     ports:
       - "${POSTGRES_PORT}:5432"
     restart: always
