--- a/external.docker-compose.yml
+++ b/external.docker-compose.yml
@@ -18,6 +18,9 @@ services:
     environment:
       - VIRTUAL_HOST=${API_HOST}
       - LETSENCRYPT_HOST=${API_HOST}
+      - CORS_ORIGINS=https://${APP_HOST}
+      - DATABASE_URL=postgresql://greentechsee:${POSTGRES_PASSWORD}@database:${POSTGRES_PORT}/greentechsee
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
   database:
     image: postgres:13.3
     command: postgres -c 'max_connections=50'
