--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - VIRTUAL_HOST=${API_HOST}
       - LETSENCRYPT_HOST=${API_HOST}
       - CORS_ORIGINS=https://${APP_HOST}
-      - DATABASE_URL=postgresql://greentechsee:${POSTGRES_PASSWORD}@database:${POSTGRES_PORT}/greentechsee
+      - DATABASE_URL=postgresql://greentechsee:${POSTGRES_PASSWORD}@database:5432/greentechsee
       - OPENAI_API_KEY=${OPENAI_API_KEY}
   database:
     image: postgres:13.3
