--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.27.3",
+    "i18next": "^23.10.1",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0"
   },
